--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,9 +1,17 @@
 h1. Changelog
 
+h2. 4.9.0 - YYYY-MM-DD
+
+* For Textpattern 4.9.0+ only.
+* Hook into core's email workflow, sending via internal mail or SMTP accordingly.
+* Deprecate @<txp:com_connect_mime>@ in favour of the wrapper @<txp:com_connect_body>@ tag.
+
 h2. 4.7.0 - YYYY-MM-DD
 
+* Fix a few PHP 8.x warnings.
 * Load lang strings in a Textpattern 4.7.0-ish way.
 * Add en language designators to Textpack (thanks, cara-tm).
+* Introduce @<txp:com_connect_mime>@ for supporting HTML content.
 * Only display labels if they've been specified (thanks, dragondz and jools-r).
 * Fallback on name if label is empty.
 * Use 'expire' attribute value in deletion of old tokens.
