--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,6 +1,6 @@
 h1. Changelog
 
-h2. 4.9.0 - YYYY-MM-DD
+h2. 4.9.0-beta - 2023-02-27
 
 * For Textpattern 4.9.0+ only.
 * Hook into core's email workflow, sending via internal mail or SMTP accordingly.
