--- a/README.textile
+++ b/README.textile
@@ -24,6 +24,7 @@ h2. Contents
 ** "com_connect_label tag":#cc_label
 ** "com_connect_value tag":#cc_value
 ** "com_connect_if tag":#cc_if
+** "com_connect_expect tag":#cc_expect
 * "Advanced examples":#advanced
 ** "Separate input and error forms":#advanced1
 ** "User selectable subject field":#advanced2
@@ -47,7 +48,7 @@ h3. Features
 * UTF-8 safe.
 * Accessible form layout, including @<label>@, @<legend>@ and @<fieldset>@ tags.
 * Various classes and ids to allow easy styling of all parts of the form.
-* Spam prevention API (used by Tranquillo's @pap_contact_cleaner@ plugin) and delivery API for altering or extending the plugin's capabilities.
+* Built-in spam prevention options, and a spam/delivery API for altering or extending the plugin's capabilities.
 
 h3. History
 
@@ -55,7 +56,7 @@ Please see the "changelog on GitHub":https://github.com/textpattern/com_connect/
 
 h2(#install). Installing and upgrading
 
-*Requires Textpattern 4.7.0+*
+*Requires Textpattern 4.9.0+*
 
 Download the latest release of the plugin from "the GitHub project page":https://github.com/textpattern/com_connect/releases, paste the code into the Textpattern Admin>Plugins panel, install and enable the plugin. Visit the "forum thread":https://forum.textpattern.io/viewtopic.php?id=47913 for more info or to report on the success or otherwise of the plugin.
 
@@ -126,7 +127,7 @@ h2(#tags). Tags
 
 All other tags provided by this plugin can only be used inside a @<txp:com_connect>@ - @</txp:com_connect>@ container tag or in a Textpattern form used as the @form@ attribute in the @<txp:com_connect />@ tag.
 
-In addition to the tags detailed in the following sections, every tag accepts a core set of common attributes. These are:
+In addition to the attributes detailed in the following sections, every tag accepts a core set of common attributes. These are:
 
 ; @accesskey="character"@
 : Shortcut key to set focus on the field.
@@ -165,6 +166,9 @@ May be used as a single (self-closing) or container tag. Place this where you wa
 
 h4. Attributes
 
+; @action="destination URL(s)"@
+: If you wish to divert the submission to a different URL endpoint, specify it here. Otherwise, omit this to default to the current page URL.
+: To aid with spam prevention, this attribute accepts up to two comma-separated URLs, the first being a 'fake' submission endpoint, and the second being the 'real' endpoint. Combined with the @delay@ attribute this can be used to trick automated form-filling scripts into submitting to the wrong place. If you omit the second URL after the comma (e.g. action="https://fake.example.org/spam-here,") then the 'real' destination will default to the current page URL.
 ; @body_form="form name"@
 : Use specified form for the message body text.
 ; @class="space-separated values"@
@@ -177,6 +181,9 @@ h4. Attributes
 : @thanks@: Class applied to the wrapper around the @thanks_form@. Default: @comThanks@.
 ; @copysender="boolean"@
 : Whether to send a copy of the email to the sender's address. Available values: @1@ (yes) or @0@ (no). Default is @0@.
+; @delay="integer or range"@
+: Set a global delay, in seconds, after which any secondary @action@ and delayed form fields will be revealed. Use this feature to catch out automated form-filling scripts by adding fields you do/do not want to be filled out by human visitors after a short delay.
+: Default: 5-10.
 ; @expire="number"@
 : Number of seconds after which the form will expire, thus requiring a page refresh before sending. Default is @600@.
 ; @form="form name"@
@@ -292,6 +299,10 @@ h4. Attributes
 : Set the CSS @class@ name of the tag. Default: @comText@. To remove @class@ attribute from the element entirely, use @class=""@.
 ; @default="value"@
 : Default value when no input is provided.
+; @delay="integer or range"@
+: Length of time, in seconds, before the input field is added to the form. Requires JavaScript. If a range is specified, the delay will be randomly chosen between the minimum and maximum values. If the attribute is supplied without a value, the global @delay@ value set in the form itself will be used.
+; @expected="value"@
+: This feature can be used to add honeypot fields that are either required to be submitted with the form, or designed to be hidden and filled in by over-zealous scripts. See "com_connect_expect":#cc_expect.
 ; @html_form="id"@
 : The HTML @id@ of the @<form>@ tag to which the field is attached. Associated with the contained form by default.
 ; @inputmode="value"@
@@ -358,6 +369,18 @@ h5. Example 3: Telephone input with validation
 Create a telephone field with a "validation pattern for UK telephone number":http://html5pattern.com/Phones format:
 
 bc(language-markup). <txp:com_connect_text type="tel" label="Telephone" pattern="^\s*\(?(020[7,8]{1}\)?[ ]?[1-9]{1}[0-9{2}[ ]?[0-9]{4})|(0[1-8]{1}[0-9]{3}\)?[ ]?[1-9]{1}[0-9]{2}[ ]?[0-9]{3})\s*$" required="1" />
+
+h5. Example 4: Delayed input field to trap automated form-filling scripts
+
+bc(language-markup). <txp:com_connect_text hidden label="" name="r_u_human" default="yes" expected="yes" delay="6-15" required="0" />
+
+When the page is loaded, this field will not be in the markup. Between 6 and 15 seconds after the visitor begins interacting with the form, the (hidden) field will be added inside the form. If a bot or automated script submits the form before his field is added, it will not be in the payload and the expected criteria will not be met, so the form submission will be rejected.
+
+h5. Example 5: Human test
+
+bc(language-markup). <txp:com_connect_text label="What is five times six?" name="humancheck" expected="30, thirty" />
+
+If the visitor does not type in one of the correct expected values, the form will be rejected.
 
 h3(#cc_email). com_connect_email tag
 
@@ -850,6 +873,30 @@ bc(language-markup). <txp:com_connect_if name="delivery" value="courier">
    <txp:com_connect_label name="delivery" />: <txp:com_connect_value name="delivery" />
 </txp:com_connect_if>.
 
+h3(#cc_expect). com_connect_expect tag
+
+bc(language-markup). <txp:com_connect_expect />
+
+Provide name=value pairs that your form expects (or doesn't expect) to be filled out.
+
+h4. Attributes
+
+; @name="text"@
+: The name of the field you're expecting to see in the results.
+; @value="text"@
+: The value you're expecting the field to contain. Omit this attribute if you _don't_ expect the field to be in the submitted form data.
+
+This tag is called internally if you specify the @expected@ attribute of the "com_connect_text tag":#cc_text so there's no need to call it by hand. Use it only if you're expecting something out of the ordinary, or for trapping particular circumstances.
+
+h4. Examples
+
+h5. Example 1: Provide a hidden honeypot field that humans will never see or fill out
+
+bc(language-markup). <txp:com_connect_text hidden label="" name="office_phone" required="0" />
+<txp:com_connect_expect name="office_phone" />
+
+This behaves in a similar manner to how pap_comconnect_cleaner works, but native to the plugin. Omitting the @value@ attribute means you're expecting the field to _not_ be in the submitted data.
+
 h2(#advanced). Advanced examples
 
 h3(#advanced1). Separate input and error forms
@@ -880,16 +927,16 @@ Create a Textpattern form called "my_subject_form", containing:
 
 bc(language-markup). <txp:php>
     global $com_connect_form;
-    echo $com_connect_form['Choose Subject'];
+    echo $com_connect_form['Choose Subject'][0];
 </txp:php>
 
-The @label@ used in the @com_connect_select@ tag must be identical to the corresponding variable in the @subject_form@. Here we used @Choose subject@.
+The @label@ used in the @com_connect_select@ tag must be identical to the corresponding variable in the @subject_form@. Here we used @Choose Subject@.
 
 If you'd prefer to add a common prefix for all subjects, use a @subject_form@ containing:
 
 bc(language-markup). <txp:php>
     global $com_connect_form;
-    echo 'My common prefix - ' . $com_connect_form['Choose Subject'];
+    echo 'My common prefix - ' . $com_connect_form['Choose Subject'][0];
 </txp:php>
 
 h3(#advanced3). User selectable recipient, without showing email address
