--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,6 +1,6 @@
 h1. Changelog
 
-h2. 4.9.0-beta - 2023-03-13
+h2. 4.9.0-beta - 2024-02-10
 
 * For Textpattern 4.9.0+ only.
 * Hook into core's email workflow, sending via internal mail or SMTP accordingly.
@@ -8,6 +8,7 @@ h2. 4.9.0-beta - 2023-03-13
 ** @action@ attribute for the @<txp:com_connect>@ tag.
 ** @delay@ attribute to foil automated form-filling scripts.
 ** @<txp:com_connect_expect>@ and @expected@ attribute to check submitted values.
+* Add @<txp:com_connect_header>@ tag for adding arbitrary email headers.
 * Deprecate @<txp:com_connect_mime>@ in favour of the wrapper @<txp:com_connect_body>@ tag.
 * Fix com_connect_serverinfo not returning values (thanks, whocarez).
 * Fix Passing null to function in PHP 8 (thanks, peterj and jools-r).
