--- a/README.textile
+++ b/README.textile
@@ -25,6 +25,7 @@ h2. Contents
 ** "com_connect_value tag":#cc_value
 ** "com_connect_if tag":#cc_if
 ** "com_connect_expect tag":#cc_expect
+** "com_connect_header tag":#cc_header
 * "Advanced examples":#advanced
 ** "Separate input and error forms":#advanced1
 ** "User selectable subject field":#advanced2
@@ -378,7 +379,7 @@ h5. Example 4: Delayed input field to trap automated form-filling scripts
 
 bc(language-markup). <txp:com_connect_text hidden label="" name="r_u_human" default="yes" expected="yes" delay="6-15" required="0" />
 
-When the page is loaded, this field will not be in the markup. Between 6 and 15 seconds after the visitor begins interacting with the form, the (hidden) field will be added inside the form. If a bot or automated script submits the form before his field is added, it will not be in the payload and the expected criteria will not be met, so the form submission will be rejected.
+When the page is loaded, this field will not be in the markup. Between 6 and 15 seconds after the visitor begins interacting with the form, the (hidden) field will be added inside the form. If a bot or automated script submits the form before this field is added, it will not be in the payload and the expected criteria will not be met, so the form submission will be rejected.
 
 h5. Example 5: Human test
 
@@ -900,6 +901,33 @@ bc(language-markup). <txp:com_connect_text hidden label="" name="office_phone" r
 <txp:com_connect_expect name="office_phone" />
 
 This behaves in a similar manner to how pap_comconnect_cleaner works, but native to the plugin. Omitting the @value@ attribute means you're expecting the field to _not_ be in the submitted data.
+
+h3(#cc_header). com_connect_header tag
+
+bc(language-markup). <txp:com_connect_header />
+
+This tag has no effect on the form or HTML output, but will include additional headers in the email. It can be used as a single (self-closing) tag or as a container tag.
+
+h4. Attributes
+
+; @name="text"@
+: The name of the custom header you wish to add (e.g. Reply-By, Importance, List-Unsubscribe, etc).
+; @value="value"@
+: The value to supply for the named header.
+
+See "RFC 4021":https://www.rfc-editor.org/rfc/rfc4021.html for a list of available headers.
+
+h4. Examples
+
+h5. Example 1: As a single (self-closing) tag
+
+bc(language-markup). <txp:com_connect_header name="Reply-By" value="2025-12-24" />
+
+h5. Example 2: As a container tag
+
+bc(language-markup). <txp:com_connect_header name="Comments">
+    Here are some comments about the email you're receiving
+</txp:com_connect_header>
 
 h2(#advanced). Advanced examples
 
