--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -8,6 +8,7 @@ h2. 4.9.0 - 2024-mm-dd
 ** @action@ attribute for the @<txp:com_connect>@ tag.
 ** @delay@ attribute to foil automated form-filling scripts.
 ** @<txp:com_connect_expect>@ and @expected@ attribute to check submitted values.
+* Add support for file attachments via @<txp:com_connect_file />@.
 * Add @<txp:com_connect_header>@ tag for adding arbitrary email headers.
 * Deprecate @<txp:com_connect_mime>@ in favour of the wrapper @<txp:com_connect_body>@ tag.
 * Fix com_connect_serverinfo not returning values (thanks, whocarez).
